kubernetes/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
    version: '2'
  name: theo-examen
  namespace: theo-examen
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: theolivecampus/apache
          imagePullPolicy: IfNotPresent
          name: apache-theo
          ports:
            - containerPort: 80
        - image: theolivecampus/php
          imagePullPolicy: IfNotPresent
          name: php-theo
        - image: theolivecampus/mariadb
          imagePullPolicy: IfNotPresent
          name: mariadb-theo
